objects/Product2.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Boron__c</fullName>
        <description>This field captures Boron % for the product.</description>
        <inlineHelpText>This field captures Boron % for the product.</inlineHelpText>
        <label>Boron [B] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BusinessApplication__c</fullName>
        <label>Business Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Water Treatment</fullName>
                </value>
                <value>
                    <fullName>Crop Nutrition</fullName>
                </value>
                <value>
                    <fullName>Animal Nutrition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Business_Application__c</fullName>
        <label>BA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>government</fullName>
                </value>
                <value>
                    <fullName>water treatment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Calcium__c</fullName>
        <description>This field captures Calcium % for each product record</description>
        <inlineHelpText>This field captures Calcium % for each product record</inlineHelpText>
        <label>Calcium [Ca] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Chlorine__c</fullName>
        <description>This field captures Chlorine % for the product.</description>
        <inlineHelpText>This field captures Chlorine % for the product</inlineHelpText>
        <label>Chlorine [Cl] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Cobalt__c</fullName>
        <description>This field is created as a part of story to handle/store percent value of Cobalt for any Product.</description>
        <label>Cobalt [CO] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Composition__c</fullName>
        <description>This field captures Product concentration/compensation for each product record</description>
        <inlineHelpText>This field captures Product concentration/compensation for each product record</inlineHelpText>
        <label>Product Concentration / Composition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Copper__c</fullName>
        <description>This field captures Copper % for each product record</description>
        <inlineHelpText>This field captures Copper % for each product record</inlineHelpText>
        <label>Copper [CU] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CropType__c</fullName>
        <description>This field captures the crop type for each product record.</description>
        <inlineHelpText>This field captures the crop type for each product record</inlineHelpText>
        <label>Crop Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>Wheat</fullName>
                </value>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Soy</fullName>
                </value>
                <value>
                    <fullName>Corn Safrinha</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Cane</fullName>
                </value>
                <value>
                    <fullName>Pineapple</fullName>
                </value>
                <value>
                    <fullName>Pumpkin</fullName>
                </value>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Cotton-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Garlic</fullName>
                </value>
                <value>
                    <fullName>Peanut</fullName>
                </value>
                <value>
                    <fullName>Mulberry</fullName>
                </value>
                <value>
                    <fullName>Rice</fullName>
                </value>
                <value>
                    <fullName>Rice-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Potato</fullName>
                </value>
                <value>
                    <fullName>Potato-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Sweet Potato</fullName>
                </value>
                <value>
                    <fullName>Cocoa</fullName>
                </value>
                <value>
                    <fullName>Coffee-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Sugarcane-Plant</fullName>
                </value>
                <value>
                    <fullName>Soca Cane</fullName>
                </value>
                <value>
                    <fullName>Persimmon</fullName>
                </value>
                <value>
                    <fullName>Onion</fullName>
                </value>
                <value>
                    <fullName>Carrot</fullName>
                </value>
                <value>
                    <fullName>Tea</fullName>
                </value>
                <value>
                    <fullName>Citrus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_GranularType__c</fullName>
        <description>This field captures the Granular Type value for each product record</description>
        <inlineHelpText>This field captures the Granular Type value for each product record</inlineHelpText>
        <label>Granular Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Granular</fullName>
                </value>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Powder</fullName>
                </value>
                <value>
                    <fullName>Pellets</fullName>
                </value>
                <value>
                    <fullName>Coarse</fullName>
                </value>
                <value>
                    <fullName>Rock</fullName>
                </value>
                <value>
                    <fullName>Wet Rock</fullName>
                </value>
                <value>
                    <fullName>Liquid</fullName>
                </value>
                <value>
                    <fullName>Microgranulated</fullName>
                </value>
                <value>
                    <fullName>Farelado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InactiveReason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inactive Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Industry__c</fullName>
        <description>This field captures Industry value for each product record</description>
        <inlineHelpText>This field captures Industry value for each product record</inlineHelpText>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Iron__c</fullName>
        <description>This field captures Iron  % for each product record.</description>
        <inlineHelpText>This field captures Iron  % for each product record</inlineHelpText>
        <label>Iron [FE] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created as a part of story to check whether this Product would be archived or not.</description>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created as a part of story to check if the field is considered for Deletion.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LocationName__c</fullName>
        <formula>PMC_CPQ_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Magnesium__c</fullName>
        <description>This field captures Magnesium % for each product record</description>
        <inlineHelpText>This field captures Magnesium % for each product record</inlineHelpText>
        <label>Magnesium [Mg] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Manganese__c</fullName>
        <description>This field captures Manganese % for each product record</description>
        <inlineHelpText>This field captures Manganese % for each product record</inlineHelpText>
        <label>Manganese [MN] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MaterialGroup__c</fullName>
        <description>This field is created as a part of story to handle/store value of any Product&apos;s Group.</description>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BIOSCIENCE</fullName>
                    <label>Bioscience</label>
                </value>
                <value>
                    <fullName>Co-Product</fullName>
                </value>
                <value>
                    <fullName>Nitrogen</fullName>
                    <label>NITROGEN</label>
                </value>
                <value>
                    <fullName>NPK</fullName>
                </value>
                <value>
                    <fullName>Phosphate</fullName>
                </value>
                <value>
                    <fullName>Potash</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                    <label>SERVICES</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Molybdenum__c</fullName>
        <description>This field captures Molybdenum % for each product record</description>
        <inlineHelpText>This field captures Molybdenum % for each product record</inlineHelpText>
        <label>Molybdenum [MO] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetbackMaterial__c</fullName>
        <description>This field is created as a part of story to handle/store value of Netback Material for any Product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Netback Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Nitrogen__c</fullName>
        <description>This field captures the Nitrogen % for the product.</description>
        <inlineHelpText>This field captures the Nitrogen % for the product.</inlineHelpText>
        <label>Nitrogen %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PackType__c</fullName>
        <description>This field is to display the pack type of the product</description>
        <label>Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Packed</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PackageType__c</fullName>
        <description>This field captures the package type for each product record</description>
        <inlineHelpText>This field captures the package type for each product record</inlineHelpText>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PackagingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Phosphorous__c</fullName>
        <description>This field captures the Phosphorous % for the product.</description>
        <inlineHelpText>This field captures the Phosphorous % for the product.</inlineHelpText>
        <label>Phosphorous %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Potassium__c</fullName>
        <description>This field captures the Potassium % for the product.</description>
        <inlineHelpText>This field captures the Potassium % for the product.</inlineHelpText>
        <label>Potassium %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductAlias__c</fullName>
        <description>This field is created as a part of story to handle/store value of Product Alias for any Product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductCategory__c</fullName>
        <description>This is used to capture the type of Product. eg. Regular, Regular (Raw Material), Blended</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductClassification__c</fullName>
        <description>This field captures the product classification</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field captures the product classification</inlineHelpText>
        <label>Product Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductFamily__c</fullName>
        <description>This field captures the product family for the product.</description>
        <inlineHelpText>This field captures the product family for the product.</inlineHelpText>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATHOS</fullName>
                </value>
                <value>
                    <fullName>BASICA</fullName>
                </value>
                <value>
                    <fullName>BLENDS</fullName>
                </value>
                <value>
                    <fullName>BORON</fullName>
                </value>
                <value>
                    <fullName>Co-Product</fullName>
                    <label>CO-PRODUCT</label>
                </value>
                <value>
                    <fullName>DAP-MAP</fullName>
                </value>
                <value>
                    <fullName>EXCELLEN</fullName>
                </value>
                <value>
                    <fullName>FEED</fullName>
                </value>
                <value>
                    <fullName>Fluosilic Acid</fullName>
                </value>
                <value>
                    <fullName>GRAVEL</fullName>
                </value>
                <value>
                    <fullName>Gypsum</fullName>
                </value>
                <value>
                    <fullName>K-MAG</fullName>
                </value>
                <value>
                    <fullName>Limestone</fullName>
                </value>
                <value>
                    <fullName>Liquid Fert</fullName>
                </value>
                <value>
                    <fullName>MES</fullName>
                </value>
                <value>
                    <fullName>MES BLENDS</fullName>
                </value>
                <value>
                    <fullName>MICRO</fullName>
                </value>
                <value>
                    <fullName>MKP</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>MPASTO</fullName>
                </value>
                <value>
                    <fullName>N Blends</fullName>
                </value>
                <value>
                    <fullName>Nitrogen</fullName>
                </value>
                <value>
                    <fullName>NPK</fullName>
                </value>
                <value>
                    <fullName>NPK Blends</fullName>
                </value>
                <value>
                    <fullName>P Blends</fullName>
                </value>
                <value>
                    <fullName>PERFORMA BIO</fullName>
                </value>
                <value>
                    <fullName>PERFORMA BLENDS</fullName>
                </value>
                <value>
                    <fullName>P FERTILIZER</fullName>
                </value>
                <value>
                    <fullName>Phosphoric Acid</fullName>
                </value>
                <value>
                    <fullName>Rock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductId__c</fullName>
        <description>Unique ID for product generated in Salesforce System</description>
        <formula>Id</formula>
        <inlineHelpText>Unique ID for product generated in Salesforce System</inlineHelpText>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductSalesArea__c</fullName>
        <label>Product Sales Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_SalesAreaUser</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductSalesOrg__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Sales Org</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductSegment__c</fullName>
        <label>Product Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BIOSCIENCE</fullName>
                </value>
                <value>
                    <fullName>Co-Product</fullName>
                </value>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Fertilizer</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductShortDescription__c</fullName>
        <description>This field was created as part of user story to handle/store value for Product&apos;s Short Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductSubFamily__c</fullName>
        <description>This field captures the product sub family for the product</description>
        <inlineHelpText>This field captures the product sub family for the product.</inlineHelpText>
        <label>Product Sub Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMMONIA</fullName>
                </value>
                <value>
                    <fullName>APATITE</fullName>
                </value>
                <value>
                    <fullName>ASPIRE</fullName>
                </value>
                <value>
                    <fullName>ASPIRE FINE</fullName>
                </value>
                <value>
                    <fullName>ATHOS</fullName>
                </value>
                <value>
                    <fullName>BASICA</fullName>
                </value>
                <value>
                    <fullName>BORON</fullName>
                </value>
                <value>
                    <fullName>CFL ROCK</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAP-MAP</fullName>
                </value>
                <value>
                    <fullName>EXCELLEN</fullName>
                </value>
                <value>
                    <fullName>FEED</fullName>
                </value>
                <value>
                    <fullName>FLUOSILIC ACID</fullName>
                </value>
                <value>
                    <fullName>GRAVEL</fullName>
                </value>
                <value>
                    <fullName>GYPSUM</fullName>
                </value>
                <value>
                    <fullName>GYPSUM (AGRICULTURAL)</fullName>
                </value>
                <value>
                    <fullName>GYPSUM (CHEMICAL)</fullName>
                </value>
                <value>
                    <fullName>GYPSUM (CONSTRUCTION)</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>K BLENDS</fullName>
                </value>
                <value>
                    <fullName>KMAG BLENDS</fullName>
                </value>
                <value>
                    <fullName>KMAG GRANULAR</fullName>
                </value>
                <value>
                    <fullName>KMAG PREMIUM</fullName>
                </value>
                <value>
                    <fullName>KMAG SPECIAL</fullName>
                </value>
                <value>
                    <fullName>KMAG STANDARD</fullName>
                </value>
                <value>
                    <fullName>LIMESTONE</fullName>
                </value>
                <value>
                    <fullName>LIQUID FERT</fullName>
                </value>
                <value>
                    <fullName>MAGNETITE</fullName>
                </value>
                <value>
                    <fullName>MAP</fullName>
                </value>
                <value>
                    <fullName>MES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductType__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADDITIVE</fullName>
                </value>
                <value>
                    <fullName>Anhydrous Ammonia</fullName>
                </value>
                <value>
                    <fullName>Apatite</fullName>
                </value>
                <value>
                    <fullName>Aspire</fullName>
                </value>
                <value>
                    <fullName>Aspire Blends</fullName>
                </value>
                <value>
                    <fullName>Aspire Fine</fullName>
                </value>
                <value>
                    <fullName>Athos 02.19.19</fullName>
                </value>
                <value>
                    <fullName>Athos 02.19.21</fullName>
                </value>
                <value>
                    <fullName>Athos 02.22.10</fullName>
                </value>
                <value>
                    <fullName>Athos 02.24.06</fullName>
                </value>
                <value>
                    <fullName>Athos 02.28.00</fullName>
                </value>
                <value>
                    <fullName>Athos 02.28.21</fullName>
                </value>
                <value>
                    <fullName>Athos 03.24.06</fullName>
                </value>
                <value>
                    <fullName>Athos 03.32.08</fullName>
                </value>
                <value>
                    <fullName>Athos Blends</fullName>
                </value>
                <value>
                    <fullName>Basica Pro</fullName>
                </value>
                <value>
                    <fullName>Bayovar</fullName>
                </value>
                <value>
                    <fullName>Biofos</fullName>
                </value>
                <value>
                    <fullName>Biofos Coarse</fullName>
                </value>
                <value>
                    <fullName>Boron</fullName>
                </value>
                <value>
                    <fullName>Concentrate</fullName>
                </value>
                <value>
                    <fullName>Crystal Granular</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAP-MAP</fullName>
                </value>
                <value>
                    <fullName>Dynafos</fullName>
                </value>
                <value>
                    <fullName>Dynak</fullName>
                </value>
                <value>
                    <fullName>Dynamate</fullName>
                </value>
                <value>
                    <fullName>Excellen</fullName>
                </value>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Fluorosilicic Acid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductTypes__c</fullName>
        <description>This will be used to store Product Hiearchy Informaiton.</description>
        <label>Product Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Co-Product</fullName>
                </value>
                <value>
                    <fullName>Intermediary</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                    <label>SERVICES</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuantityUnitOfMeasure__c</fullName>
        <description>This field has been created as part of US-Product Fields (FS Specification)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quantity Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Region__c</fullName>
        <description>To identify which product belongs to which region so that the product selection can be done accurately. Avoiding cross-region sales. etc,</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPProductCode__c</fullName>
        <description>This field captures the product code in SAP system for the product.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Product code in SAP system.</inlineHelpText>
        <label>SAP Product Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesOrg__c</fullName>
        <label>Sales Org</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_SalesOrgValue_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Seasonality__c</fullName>
        <description>This field is created as a part of story to handle/store value of Seasonality for any Product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Seasonality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SeedzPoints__c</fullName>
        <description>This field captures the allocated seedz points for product.</description>
        <inlineHelpText>This field captures the allocated seedz points for product.</inlineHelpText>
        <label>Seedz Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Silicone__c</fullName>
        <description>This field captures Silicon% for each product record</description>
        <inlineHelpText>This field captures Silicon% for each product record</inlineHelpText>
        <label>Silicone [SI] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Sulfur__c</fullName>
        <description>This field captures Sulfur % for each product record</description>
        <inlineHelpText>This field captures Sulfur % for each product record</inlineHelpText>
        <label>Sulfur [S] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Zinc__c</fullName>
        <description>This field captures Zinc % for each product record</description>
        <inlineHelpText>This field captures Zinc % for each product record</inlineHelpText>
        <label>Zinc [Zn] %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>